--- a/generate-api-rest-front/src/app/generate/components/controlador/controlador.component.html
+++ b/generate-api-rest-front/src/app/generate/components/controlador/controlador.component.html
@@ -1,12 +1,12 @@
 
-<h2 mat-dialog-title class="fw-bolder font-monospace">C O N T R O L L E R</h2>
+<h2 mat-dialog-title class="fw-bolder font-monospace text-success">C O N T R O L L E R</h2>
 <mat-dialog-content class="mat-typography">
-    <mat-card class="example-card">
+    <mat-card class="example-card ">
         <!--<mat-card-title>Entity</mat-card-title>-->
         <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-        <mat-card-content>
+        <mat-card-content class=" ">
             <!--<p>This card indeterminates progress bar.</p>-->
-            <pre><code class="java">{{controller}}</code></pre>
+            <pre><code class="java"><p>{{controller}}</p></code></pre>
         </mat-card-content>
         <mat-card-actions>
             
