--- a/generate-api-rest-front/src/app/generate/components/repository/repository.component.html
+++ b/generate-api-rest-front/src/app/generate/components/repository/repository.component.html
@@ -1,10 +1,10 @@
 
-<h2 mat-dialog-title class="fw-bolder font-monospace">R E P O S I T O R Y</h2>
+<h2 mat-dialog-title class="fw-bolder font-monospace text-success">R E P O S I T O R Y</h2>
 <mat-dialog-content class="mat-typography">
-    <mat-card class="example-card">
+    <mat-card class="example-card ">
         <!--<mat-card-title>Entity</mat-card-title>-->
         <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-        <mat-card-content>
+        <mat-card-content class=" ">
             <!--<p>This card indeterminates progress bar.</p>-->
             <pre><code class="java">{{repository}}</code></pre>
         </mat-card-content>
