--- a/generate-api-rest-front/src/styles.css
+++ b/generate-api-rest-front/src/styles.css
@@ -14,3 +14,10 @@ html, body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.color-bg {
+    background: black !important;
+}
+
