--- a/generate-api-rest-front/src/app/generate/components/entity/entity.component.html
+++ b/generate-api-rest-front/src/app/generate/components/entity/entity.component.html
@@ -1,10 +1,13 @@
 
-<h2 mat-dialog-title class="fw-bolder font-monospace">E n t i t y</h2>
+
+
+<div mat-dialog-container class="bg-color">
+  <h2 mat-dialog-title class="fw-bolder font-monospace text-success">E n t i t y</h2>
 <mat-dialog-content class="mat-typography">
-    <mat-card class="example-card">
+    <mat-card class="example-card ">
         <!--<mat-card-title>Entity</mat-card-title>-->
         <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-        <mat-card-content>
+        <mat-card-content class=" ">
             <!--<p>This card indeterminates progress bar.</p>-->
             <pre><code class="java">{{entity}}</code></pre>
         </mat-card-content>
@@ -16,7 +19,10 @@
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close color="warn">Cancel</button>
   <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-    <mat-icon>content_copy</mat-icon>
+    <mat-icon class="material-symbols-outlined">
+      content_copy
+      </mat-icon>
     </button>
   <!--<button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>-->
 </mat-dialog-actions>
+</div>
