--- a/generate-api-rest-front/src/app/generate/pages/inicio/inicio.component.html
+++ b/generate-api-rest-front/src/app/generate/pages/inicio/inicio.component.html
@@ -16,104 +16,94 @@
 
                 </div>
                 <div class="col-2 me-4">
-                    <button type="submit" (click)="submitForm()" class="btn btn-dark bg-black me-md-1 me-lg-5 ms-xl-5"
+                    <button class="btn btn-dark bg-black me-md-1 me-lg-5 ms-xl-5"
                         (click)="generar()">Generar</button>
                 </div>
             </div>
         </div>
 
-        <div class="col-5 w-75">
+        <div class="col-6 w-75">
+
             <div class="row">
                 <div class="col-12">
-                    <div class="row needs-validation" #myForm (ngSubmit)="onSubmit()">
+                    <div class="row d-flex justify-content-between mb-2">
 
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col-12 mb-2 mt-md-0 col-md-4 d-flex row">
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Package Name</mat-label>
-                                        <input matInput placeholder="mx.unach" [formControl]="pn" required
-                                        [(ngModel)]="body.packageName">
-                                        <mat-error *ngIf="pn.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-
-
-                                </div>
-                                <div class="col-12 col-md-4 mb-2 md-md-0 d-flex row">
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Nombre clase</mat-label>
-                                        <input matInput placeholder="mx.unach" [formControl]="nameClase" required
-                                        [(ngModel)]="body.nameClase">
-                                        <mat-error *ngIf="nameClase.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-
-                                    
-                                </div>
-                                <div class="col-12 mb-2 md-md-0 col-md-4 d-flex row">
-
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Nombre tabla</mat-label>
-                                        <input matInput placeholder="mx.unach" [formControl]="nameTable" required
-                                        [(ngModel)]="body.nameTable">
-                                        <mat-error *ngIf="nameTable.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-12 mb-2 mt-md-0 col-sm-6 col-xl-3 d-flex row">
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Tipo de dato de la PK</mat-label>
-                                        <input matInput placeholder="mx.unach" [formControl]="typePK" required
-                                        [(ngModel)]="attributeModel.typePK">
-                                        <mat-error *ngIf="typePK.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-12 mb-2 mt-md-0 col-sm-6 col-xl-3 d-flex row">
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Nombre de la PK en la clase</mat-label>
-                                        <input matInput placeholder="mx.unach" [formControl]="namePK" required
-                                        [(ngModel)]="attributeModel.namePK">
-                                        <mat-error *ngIf="namePK.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-
-                                </div>
-
-                                <div class="col-12 mb-2 mt-md-0 col-sm-6 col-xl-3 d-flex row">
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Es Serial</mat-label>
-                                        <input matInput placeholder="true" [formControl]="isSerial" required
-                                        [(ngModel)]="attributeModel.isSerial">
-                                        <mat-error *ngIf="isSerial.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-12 mb-2 col-sm-6 col-xl-3  mt-md-0 d-flex row">
-
-                                    <mat-form-field appearance="fill" class="bg-white ">
-                                        <mat-label>Nombre de la PK en la DB</mat-label>
-                                        <input matInput placeholder="true" [formControl]="nameColumnDB" required
-                                        [(ngModel)]="attributeModel.nameColumnDB">
-                                        <mat-error *ngIf="nameColumnDB.invalid">{{getErrorMessage()}}</mat-error>
-                                    </mat-form-field>
-
-
-                                    
-                                </div>
-                            </div>
+                        <div class="col-12 col-md-4 d-flex row mb-2 mb-md-0 me-xxl-1">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Package Name</mat-label>
+                                <input matInput placeholder="mx.unach" [formControl]="pn" required
+                                    [(ngModel)]="body.packageName">
+                                <mat-error *ngIf="pn.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
                         </div>
+
+                        <div class="col-12 col-md-4 d-flex row mb-2 mb-md-0 me-xxl-1">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Nombre clase</mat-label>
+                                <input matInput placeholder="mx.unach" [formControl]="nameClase" required
+                                    [(ngModel)]="body.nameClase">
+                                <mat-error *ngIf="nameClase.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-12 col-md-4 d-flex row">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Nombre tabla</mat-label>
+                                <input matInput placeholder="mx.unach" [formControl]="nameTable" required
+                                    [(ngModel)]="body.nameTable">
+                                <mat-error *ngIf="nameTable.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
+                        </div>
+
                     </div>
+
+
+                    <div class="row d-flex justify-content-between">
+
+                        <div class="col-12 col-md-6 col-xxl-3 mb-2 mb-md-2 mb-xxl-0 d-flex row">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Tipo de dato de la PK</mat-label>
+                                <input matInput placeholder="mx.unach" [formControl]="typePK" required
+                                    [(ngModel)]="attributeModel.typePK">
+                                <mat-error *ngIf="typePK.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-xxl-3 mb-2 mb-md-2 mb-xxl-0 d-flex row">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Nombre de la PK en la clase</mat-label>
+                                <input matInput placeholder="mx.unach" [formControl]="namePK" required
+                                    [(ngModel)]="attributeModel.namePK">
+                                <mat-error *ngIf="namePK.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-xxl-3 mb-2 mb-md-0 d-flex row">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Es Serial</mat-label>
+                                <input matInput placeholder="true" [formControl]="isSerial" required
+                                    [(ngModel)]="attributeModel.isSerial">
+                                <mat-error *ngIf="isSerial.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-xxl-3 mb-2 mb-md-0 d-flex row">
+                            <mat-form-field appearance="fill" class="bg-white ">
+                                <mat-label>Nombre de la PK en la DB</mat-label>
+                                <input matInput placeholder="true" [formControl]="nameColumnDB" required
+                                    [(ngModel)]="attributeModel.nameColumnDB">
+                                <mat-error *ngIf="nameColumnDB.invalid">{{getErrorMessage()}}</mat-error>
+                            </mat-form-field>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </div>
 
 
-        <div class="col-6 w-75">
+        <div class="col-6 w-75 mt-4">
 
             <div class="row">
 
