--- a/generate-api-rest-front/src/app/shared/components/header/header.component.html
+++ b/generate-api-rest-front/src/app/shared/components/header/header.component.html
@@ -1,8 +1,8 @@
-    <nav class="row navbar navbar-expand-md navbar-dark bg-dark fixed-top justify-content-between">
+    <nav class="row navbar navbar-expand-md navbar-dark bg-dark fixed-top justify-content-between metallic-dark">
 
         <div class="container-fluid">
         <!--<div class="col-4 m-2">-->
-            <a href="#" class="navbar-brand">Generador API</a>
+            <a href="#" class="navbar-brand"><p class="degradado-verde">Generador API</p></a>
 
             <!-- Menu de navegacion -->
             
@@ -18,15 +18,14 @@
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="navbar-nav ms-auto me-lg-5 mb-2 mb-lg-0">
                     <li class="nav-item"><a href="inicio" class="nav-link text-white fw-bold mt-1 me-0 me-lg-5" routerLink="inicio" routerLinkActive="active">Inicio</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white fw-bold mt-1 me-0 me-lg-5">Configuraciones</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white fw-bold mt-1 me-0 me-lg-5">Documentación</a></li>
+                    <!--<li class="nav-item"><a href="#" class="nav-link text-white fw-bold mt-1 me-0 me-lg-5">Configuraciones</a></li>-->
+                    <li class="nav-item"><a href="documentacion" class="nav-link text-white fw-bold mt-1 me-0 me-lg-5">Documentación</a></li>
                 </ul>
 
             </div>
 
             
         <!--</div>-->
-
 
     </div>
     </nav>
