--- a/generate-api-rest-front/src/app/app.component.html
+++ b/generate-api-rest-front/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
-  <div class="col-12">
-      <app-header></app-header>
+  <div class="col-12 ">
+      <app-header class=""></app-header>
   </div>
   <div class="col-12 ">
       <router-outlet></router-outlet>
