--- a/generate-api-rest-front/src/app/generate/components/attributos-foraneos/attributos-foraneos.component.html
+++ b/generate-api-rest-front/src/app/generate/components/attributos-foraneos/attributos-foraneos.component.html
@@ -2,7 +2,7 @@
 
   <div class="row ">
     <div class="col-12">
-      <h2 mat-dialog-title class="text-center">ATRIBUTO SECUNDARIO</h2>
+      <h2 mat-dialog-title class="text-center">{{titulo}}</h2>
     </div>
 
     <div class="col">
@@ -10,35 +10,35 @@
 
         <mat-form-field class="col-12 col-md-6 col-xl-3 me-md-2 d-flex row">
             <mat-label>¿Tipo de atributo?</mat-label>
-            <input matInput [(ngModel)]="data.typePK" [formControl]="typePK" required>
-            <mat-error *ngIf="typePK.invalid">
+            <input matInput [(ngModel)]="data.tipo" [formControl]="tipo" required>
+            <mat-error *ngIf="tipo.invalid">
               {{ getErrorMessage() }}
             </mat-error>
           </mat-form-field>
         
           <mat-form-field class="col-12 col-md-6 col-xl-3 me-md-2 d-flex row">
             <mat-label>¿Nombre de atributo?</mat-label>
-            <input matInput [(ngModel)]="data.namePK" [formControl]="namePK" required>
-            <mat-error *ngIf="namePK.invalid">
+            <input matInput [(ngModel)]="data.nombre" [formControl]="nombre" required>
+            <mat-error *ngIf="nombre.invalid">
               {{ getErrorMessage() }}
             </mat-error>
           </mat-form-field>
       
           <mat-form-field class="col-12 col-md-6 col-xl-3 me-md-2 d-flex row">
             <mat-label>¿Nombre de columna?</mat-label>
-            <input matInput [(ngModel)]="data.namePKBD" [formControl]="namePKBD" required>
-            <mat-error *ngIf="namePKBD.invalid">
+            <input matInput [(ngModel)]="data.columna" [formControl]="columna" required>
+            <mat-error *ngIf="columna.invalid">
               {{ getErrorMessage() }}
             </mat-error>
           </mat-form-field>
 
-          <mat-form-field class="col-12 col-md-6 col-xl-3 d-flex row">
+          <mat-form-field class="col-12 col-md-6 col-xl-3 me-md-2 d-flex row">
             <mat-label>¿Cardinalidad?</mat-label>
-            <select matNativeControl [(ngModel)]="data.cardinality" [formControl]="cardinality" required>
-              <option value="UNO_A_UNO">Uno A Uno</option>
-              <option value="UNO_A_MUCHOS">Uno a Muchos</option>
-              <option value="MUCHOS_A_MUCHOS">Muchos A Muchos</option>
-              <option value="MUCHOS_A_UNO">Muchos A Uno</option>
+            <select matNativeControl [(ngModel)]="data.relacion" [formControl]="relacion" required>
+              <option [selected]="is1a1" value="1 A 1">1 A 1</option>
+              <option [selected]="is1aN" value="1 A N">1 A N</option>
+              <option [selected]="isNa1" value="N A 1">N A 1</option>
+              <option [selected]="isNaM" value="N A M">N A M</option>
             </select>
           </mat-form-field>
 
@@ -52,7 +52,7 @@
           </div>
           <div class="col-2 col-xl-1 me-4 me-sm-0">
             <button mat-raised-button
-              [mat-dialog-close]="typePK.invalid || namePK.invalid || namePKBD.invalid || cardinality.invalid ? null : data" cdkFocusInitial
+              [mat-dialog-close]="tipo.invalid || nombre.invalid || columna.invalid || relacion.invalid ? null : data" cdkFocusInitial
               color="primary">Agregar</button>
           </div>
         </mat-dialog-actions>
