--- a/generate-api-rest-front/src/app/generate/components/repository/repository.component.html
+++ b/generate-api-rest-front/src/app/generate/components/repository/repository.component.html
@@ -6,7 +6,7 @@
         <!--<mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
         <mat-card-content class=" ">
             <!--<p>This card indeterminates progress bar.</p>-->
-            <pre><code class="java">{{repository}}</code></pre>
+            <pre class="java"><code>{{repository}}</code></pre>
         </mat-card-content>
         <mat-card-actions>
             
@@ -16,7 +16,9 @@
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close color="warn">Cancel</button>
   <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-    <mat-icon>content_copy</mat-icon>
+    <mat-icon (click)="copiarTexto()" class="material-symbols-outlined">
+      content_copy
+      </mat-icon>
     </button>
   <!--<button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>-->
 </mat-dialog-actions>
