--- a/generate-api-rest-front/src/app/generate/components/tabla-foraneos/tabla-foraneos.component.html
+++ b/generate-api-rest-front/src/app/generate/components/tabla-foraneos/tabla-foraneos.component.html
@@ -3,33 +3,53 @@
 </div>
 
 
-<div class="col-12 mb-5">
+<div class="col-12 mb-5 ">
 
-    <div class="mat-elevation-z8">
+    <div class=" ">
         <table mat-table [dataSource]="dataSourceForaneos">
             
             <!-- Position Column -->
-            <ng-container matColumnDef="typeFK">
-                <th mat-header-cell *matHeaderCellDef> tipo PK </th>
-                <td mat-cell *matCellDef="let element"> {{element.typeFK}} </td>
+            <ng-container matColumnDef="tipo">
+                <th mat-header-cell *matHeaderCellDef> tipo </th>
+                <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
             </ng-container>
 
             <!-- Position Column -->
-            <ng-container matColumnDef="nameFK">
-                <th mat-header-cell *matHeaderCellDef> nombre PK </th>
-                <td mat-cell *matCellDef="let element"> {{element.nameFK}} </td>
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef>nombre</th>
+                <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
             </ng-container>
 
             <!-- Position Column -->
-            <ng-container matColumnDef="nameColumnDB">
-                <th mat-header-cell *matHeaderCellDef> nombre Columna BD </th>
-                <td mat-cell *matCellDef="let element"> {{element.nameColumnDB}} </td>
+            <ng-container matColumnDef="column">
+                <th mat-header-cell *matHeaderCellDef> columna </th>
+                <td mat-cell *matCellDef="let element">{{element.columna}}</td>
             </ng-container>
 
             <!-- Position Column -->
-            <ng-container matColumnDef="cardinality">
-                <th mat-header-cell *matHeaderCellDef> cardinalidad </th>
-                <td mat-cell *matCellDef="let element"> {{element.cardinality}} </td>
+            <ng-container matColumnDef="relacion">
+                <th mat-header-cell *matHeaderCellDef>relacion</th>
+                <td mat-cell *matCellDef="let element">{{element.relacion}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="accion">
+                <th mat-header-cell *matHeaderCellDef>-ACCION-</th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="element">
+                        <mat-icon 
+                            style="color: #218c74;" 
+                            aria-hidden="false" 
+                            aria-label="Example home icon"
+                            (click)="actualizar(element)"
+                        >edit</mat-icon>
+                        <mat-icon 
+                            style="color: dark;" 
+                            aria-hidden="false" 
+                            aria-label="Example home icon"
+                            (click)="eliminar(element)"
+                        >delete</mat-icon>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumnsForaneos"></tr>
