--- a/generate-api-rest-front/src/app/generate/components/tabla-normal/tabla-normal.component.html
+++ b/generate-api-rest-front/src/app/generate/components/tabla-normal/tabla-normal.component.html
@@ -9,21 +9,41 @@
         <table mat-table [dataSource]="dataSource">
 
             <!-- Position Column -->
-            <ng-container matColumnDef="typeNormal">
-                <th mat-header-cell *matHeaderCellDef> tipo normal </th>
-                <td mat-cell *matCellDef="let element"> {{element.typeNormal}} </td>
+            <ng-container matColumnDef="tipo">
+                <th mat-header-cell *matHeaderCellDef> tipo </th>
+                <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
             </ng-container>
 
             <!-- Position Column -->
-            <ng-container matColumnDef="nameNormal">
-                <th mat-header-cell *matHeaderCellDef> nombre normal </th>
-                <td mat-cell *matCellDef="let element"> {{element.nameNormal}} </td>
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef> nombre </th>
+                <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
             </ng-container>
 
             <!-- Position Column -->
-            <ng-container matColumnDef="nameColumnDB">
-                <th mat-header-cell *matHeaderCellDef> nombre column DB </th>
-                <td mat-cell *matCellDef="let element"> {{element.nameColumnDB}} </td>
+            <ng-container matColumnDef="columna">
+                <th mat-header-cell *matHeaderCellDef> columna </th>
+                <td mat-cell *matCellDef="let element"> {{element.columna}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="accion">
+                <th mat-header-cell *matHeaderCellDef>-ACCION-</th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="element">
+                        <mat-icon 
+                            style="color: #218c74;" 
+                            aria-hidden="false" 
+                            aria-label="Example home icon"
+                            (click)="actualizar(element)"
+                        >edit</mat-icon>
+                        <mat-icon 
+                            style="color: dark;" 
+                            aria-hidden="false" 
+                            aria-label="Example home icon"
+                            (click)="eliminar(element)"
+                        >delete</mat-icon>
+                    </ng-container>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
